fixing autoscroll on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -394,12 +394,14 @@ body {
 .lyrics-container {
   flex: 1;
   overflow-y: scroll;
-  -webkit-overflow-scrolling: touch; 
-  WebkitOverflowScrolling: touch;   
+  -webkit-overflow-scrolling: touch;
+  touch-action: pan-y; /* For Mobile scrolling */
+  overscroll-behavior: contain;
   font-size: 24px;
   line-height: 1.7;
   padding: 10px;
 }
+
 
 .live-container {
   height: 100vh;
